# SperInvest

client/Client_App/: CMakeLists.txt  account_info.cpp  account_info.h  account_info_widget.cpp  account_info_widget.h  account_info_widget.ui  add_money_window.cpp  add_money_window.h  add_money_window.ui  buy_exchange.cpp  buy_exchange.h  buy_exchange.ui  client.cpp  client.h  create_account.cpp  create_account.h  create_account_window.ui  enter_window.cpp  enter_window.h  enter_window.ui  exch.cpp  exch.h  exch.ui  exch_tab.cpp  exch_tab.h  exch_tab.ui  exchange_data.cpp  exchange_data.h  exchange_data.ui  exchange_widget.cpp  exchange_widget.h  get_money_window.cpp  get_money_window.h  get_money_window.ui  main.cpp  marketdata_info.cpp  marketdata_info.h  purchase.cpp  purchase.h  registration_window.cpp  (+5 more)
client/build-Client_App-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Client_App.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
client/build-Client_App-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
client/build-Client_App-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/Client_App_autogen/: deps  mocs_compilation.cpp
client/build-Client_App-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/Client_App_autogen/EWIEGA46WW/: moc_client.cpp  moc_client.cpp.d  moc_enter_window.cpp  moc_enter_window.cpp.d  moc_registration_window.cpp  moc_registration_window.cpp.d  moc_sperinvestwindow.cpp  moc_sperinvestwindow.cpp.d
server/Server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  connect_to_data_base.cpp  connect_to_data_base.h  connect_to_moex_info.cpp  connect_to_moex_info.h  main.cpp  server.cpp  server.h
server/build-Server-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Server.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
server/build-Server-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
server/build-Server-Desktop_Qt_6_5_1_MSVC2019_64bit-Debug/Server_autogen/: deps  mocs_compilation.cpp
(+25 files in other folders)
